--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "chakra-paginator": "^0.7.2",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
     "next": "11.0.1",
