--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "graphql": "^15.5.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "zustand": "^3.5.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
