--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chakra-paginator": "^0.7.2",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
+    "lodash": "^4.17.21",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
